Return dedicated type for get all schemas